--- a/backend/.env
+++ b/backend/.env
@@ -9,6 +9,6 @@ SMTP_HOST=smtp.gmail.com
 SMTP_USER=your_smtp_email_here
 SMTP_PASS=your_smtp_app_password_here
 JWT_SECRET=your_jwt_secret_here
-VITE_BACKEND_URL=http://localhost:4000
-FRONTEND_URL=http://localhost:5173
-ADMIN_FRONTEND_URL=http://localhost:5180
+VITE_BACKEND_URL=your_localhost_server_here
+FRONTEND_URL=your_localhost_server_here
+ADMIN_FRONTEND_URL=your_localhost_server_here
